--- a/DataGo/utility/cell/OrderCell.xib
+++ b/DataGo/utility/cell/OrderCell.xib
@@ -2,19 +2,19 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<string key="IBDocument.SystemVersion">12A269</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2549</string>
+		<string key="IBDocument.AppKitVersion">1187</string>
+		<string key="IBDocument.HIToolboxVersion">624.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1498</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUITableViewCell</string>
+			<string>IBProxyObject</string>
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
-			<string>IBProxyObject</string>
+			<string>IBUITableViewCell</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -45,6 +45,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 5}, {72, 90}}</string>
 								<reference key="NSSuperview" ref="1072273735"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="578048048"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -53,9 +54,10 @@
 							<object class="IBUILabel" id="578048048">
 								<reference key="NSNextResponder" ref="1072273735"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{90, 9}, {240, 54}}</string>
+								<string key="NSFrame">{{82, 5}, {212, 44}}</string>
 								<reference key="NSSuperview" ref="1072273735"/>
-								<reference key="NSNextKeyView" ref="958091762"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="988244621"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -84,92 +86,13 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="135957227">
-								<reference key="NSNextResponder" ref="1072273735"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{497, 20}, {92, 32}}</string>
-								<reference key="NSSuperview" ref="1072273735"/>
-								<reference key="NSNextKeyView" ref="824992347"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="863420065"/>
-								<reference key="IBUIHighlightedColor" ref="932446283"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="86567470"/>
-								<reference key="IBUIFont" ref="471484986"/>
-							</object>
-							<object class="IBUILabel" id="824992347">
-								<reference key="NSNextResponder" ref="1072273735"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{603, 20}, {92, 32}}</string>
-								<reference key="NSSuperview" ref="1072273735"/>
-								<reference key="NSNextKeyView" ref="988244621"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="863420065"/>
-								<reference key="IBUIHighlightedColor" ref="932446283"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="86567470"/>
-								<reference key="IBUIFont" ref="471484986"/>
-							</object>
 							<object class="IBUILabel" id="158575141">
 								<reference key="NSNextResponder" ref="1072273735"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{335, 59}, {96, 32}}</string>
+								<string key="NSFrame">{{82, 64}, {212, 32}}</string>
 								<reference key="NSSuperview" ref="1072273735"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="572051885"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="863420065"/>
-								<reference key="IBUIHighlightedColor" ref="932446283"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="86567470"/>
-								<reference key="IBUIFont" ref="471484986"/>
-							</object>
-							<object class="IBUILabel" id="958091762">
-								<reference key="NSNextResponder" ref="1072273735"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{335, 20}, {88, 32}}</string>
-								<reference key="NSSuperview" ref="1072273735"/>
-								<reference key="NSNextKeyView" ref="296997600"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="863420065"/>
-								<reference key="IBUIHighlightedColor" ref="932446283"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="86567470"/>
-								<reference key="IBUIFont" ref="471484986"/>
-							</object>
-							<object class="IBUILabel" id="296997600">
-								<reference key="NSNextResponder" ref="1072273735"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{439, 20}, {40, 32}}</string>
-								<reference key="NSSuperview" ref="1072273735"/>
-								<reference key="NSNextKeyView" ref="135957227"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -187,8 +110,9 @@
 							<object class="IBUILabel" id="988244621">
 								<reference key="NSNextResponder" ref="1072273735"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{90, 62}, {240, 32}}</string>
+								<string key="NSFrame">{{82, 42}, {212, 32}}</string>
 								<reference key="NSSuperview" ref="1072273735"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="158575141"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -207,8 +131,10 @@
 							<object class="IBUILabel" id="572051885">
 								<reference key="NSNextResponder" ref="1072273735"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{497, 64}, {187, 32}}</string>
+								<string key="NSFrame">{{286, 5}, {33, 90}}</string>
 								<reference key="NSSuperview" ref="1072273735"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -223,12 +149,15 @@
 								<reference key="IBUIHighlightedColor" ref="932446283"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUINumberOfLines">4</int>
+								<int key="IBUITextAlignment">1</int>
 								<reference key="IBUIFontDescription" ref="86567470"/>
 								<reference key="IBUIFont" ref="471484986"/>
 							</object>
 						</array>
-						<string key="NSFrameSize">{704, 99}</string>
+						<string key="NSFrameSize">{320, 99}</string>
 						<reference key="NSSuperview" ref="90724719"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="15186322"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -242,12 +171,14 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{704, 100}</string>
+				<string key="NSFrameSize">{320, 100}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1072273735"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				<reference key="IBUIContentView" ref="1072273735"/>
+				<integer value="100" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -278,43 +209,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">price</string>
-						<reference key="source" ref="90724719"/>
-						<reference key="destination" ref="958091762"/>
-					</object>
-					<int key="connectionID">28</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">num</string>
-						<reference key="source" ref="90724719"/>
-						<reference key="destination" ref="296997600"/>
-					</object>
-					<int key="connectionID">29</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">payment</string>
 						<reference key="source" ref="90724719"/>
 						<reference key="destination" ref="158575141"/>
 					</object>
 					<int key="connectionID">30</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">discount_fee</string>
-						<reference key="source" ref="90724719"/>
-						<reference key="destination" ref="135957227"/>
-					</object>
-					<int key="connectionID">31</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">adjust_fee</string>
-						<reference key="source" ref="90724719"/>
-						<reference key="destination" ref="824992347"/>
-					</object>
-					<int key="connectionID">32</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -348,36 +247,17 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="90724719"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="958091762"/>
 							<reference ref="15186322"/>
 							<reference ref="988244621"/>
 							<reference ref="158575141"/>
-							<reference ref="296997600"/>
-							<reference ref="135957227"/>
-							<reference ref="578048048"/>
-							<reference ref="824992347"/>
 							<reference ref="572051885"/>
+							<reference ref="578048048"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
 						<reference key="object" ref="988244621"/>
-						<reference key="parent" ref="90724719"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="958091762"/>
-						<reference key="parent" ref="90724719"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">11</int>
-						<reference key="object" ref="824992347"/>
-						<reference key="parent" ref="90724719"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">12</int>
-						<reference key="object" ref="135957227"/>
 						<reference key="parent" ref="90724719"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -388,11 +268,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
 						<reference key="object" ref="15186322"/>
-						<reference key="parent" ref="90724719"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="296997600"/>
 						<reference key="parent" ref="90724719"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -412,17 +287,13 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">OrderCell</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
@@ -430,7 +301,67 @@
 			<nil key="sourceID"/>
 			<int key="maxID">35</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">OrderCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="adjust_fee">UILabel</string>
+						<string key="discount_fee">UILabel</string>
+						<string key="image">UIImageView</string>
+						<string key="num">UILabel</string>
+						<string key="payment">UILabel</string>
+						<string key="price">UILabel</string>
+						<string key="sku">UILabel</string>
+						<string key="status">UILabel</string>
+						<string key="title">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="adjust_fee">
+							<string key="name">adjust_fee</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="discount_fee">
+							<string key="name">discount_fee</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="image">
+							<string key="name">image</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="num">
+							<string key="name">num</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="payment">
+							<string key="name">payment</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="price">
+							<string key="name">price</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="sku">
+							<string key="name">sku</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="status">
+							<string key="name">status</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="title">
+							<string key="name">title</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/OrderCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -439,6 +370,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1498</string>
 	</data>
 </archive>
