--- a/DataGo/utility/cell/TradeCell.xib
+++ b/DataGo/utility/cell/TradeCell.xib
@@ -2,19 +2,19 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<string key="IBDocument.SystemVersion">12A269</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2549</string>
+		<string key="IBDocument.AppKitVersion">1187</string>
+		<string key="IBDocument.HIToolboxVersion">624.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1498</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUITableViewCell</string>
+			<string>IBProxyObject</string>
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
-			<string>IBProxyObject</string>
+			<string>IBUITableViewCell</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -58,10 +58,10 @@
 							<object class="IBUILabel" id="615595964">
 								<reference key="NSNextResponder" ref="897582437"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 8}, {260, 24}}</string>
+								<string key="NSFrame">{{6, 6}, {149, 24}}</string>
 								<reference key="NSSuperview" ref="897582437"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="770883893"/>
+								<reference key="NSNextKeyView" ref="1031859234"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -93,94 +93,10 @@
 							<object class="IBUILabel" id="1031859234">
 								<reference key="NSNextResponder" ref="897582437"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 40}, {260, 24}}</string>
+								<string key="NSFrame">{{172, 6}, {150, 24}}</string>
 								<reference key="NSSuperview" ref="897582437"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="779168002"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="162440632"/>
-								<reference key="IBUIHighlightedColor" ref="79255272"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="582660492"/>
-								<reference key="IBUIFont" ref="812991765"/>
-							</object>
-							<object class="IBUILabel" id="779168002">
-								<reference key="NSNextResponder" ref="897582437"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{280, 34}, {160, 32}}</string>
-								<reference key="NSSuperview" ref="897582437"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="374728981"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="162440632"/>
-								<reference key="IBUIHighlightedColor" ref="79255272"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="582660492"/>
-								<reference key="IBUIFont" ref="812991765"/>
-							</object>
-							<object class="IBUILabel" id="374728981">
-								<reference key="NSNextResponder" ref="897582437"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{480, 34}, {160, 32}}</string>
-								<reference key="NSSuperview" ref="897582437"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="615810372"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="162440632"/>
-								<reference key="IBUIHighlightedColor" ref="79255272"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="582660492"/>
-								<reference key="IBUIFont" ref="812991765"/>
-							</object>
-							<object class="IBUILabel" id="615810372">
-								<reference key="NSNextResponder" ref="897582437"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 66}, {260, 32}}</string>
-								<reference key="NSSuperview" ref="897582437"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="671323868"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="162440632"/>
-								<reference key="IBUIHighlightedColor" ref="79255272"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="582660492"/>
-								<reference key="IBUIFont" ref="812991765"/>
-							</object>
-							<object class="IBUILabel" id="153015017">
-								<reference key="NSNextResponder" ref="897582437"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{480, 66}, {160, 32}}</string>
-								<reference key="NSSuperview" ref="897582437"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="770883893"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -198,52 +114,10 @@
 							<object class="IBUILabel" id="770883893">
 								<reference key="NSNextResponder" ref="897582437"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{280, 4}, {160, 32}}</string>
+								<string key="NSFrame">{{6, 26}, {290, 39}}</string>
 								<reference key="NSSuperview" ref="897582437"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="469398008"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="162440632"/>
-								<reference key="IBUIHighlightedColor" ref="79255272"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="582660492"/>
-								<reference key="IBUIFont" ref="812991765"/>
-							</object>
-							<object class="IBUILabel" id="469398008">
-								<reference key="NSNextResponder" ref="897582437"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{480, 4}, {160, 32}}</string>
-								<reference key="NSSuperview" ref="897582437"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="1031859234"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="162440632"/>
-								<reference key="IBUIHighlightedColor" ref="79255272"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="582660492"/>
-								<reference key="IBUIFont" ref="812991765"/>
-							</object>
-							<object class="IBUILabel" id="671323868">
-								<reference key="NSNextResponder" ref="897582437"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{280, 66}, {160, 32}}</string>
-								<reference key="NSSuperview" ref="897582437"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="153015017"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -259,7 +133,7 @@
 								<reference key="IBUIFont" ref="812991765"/>
 							</object>
 						</array>
-						<string key="NSFrameSize">{704, 99}</string>
+						<string key="NSFrameSize">{320, 79}</string>
 						<reference key="NSSuperview" ref="1002511301"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="405391988"/>
@@ -275,14 +149,14 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{704, 100}</string>
+				<string key="NSFrameSize">{320, 80}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="897582437"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				<reference key="IBUIContentView" ref="897582437"/>
-				<real value="107" key="IBUIRowHeight"/>
+				<integer value="64" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -305,59 +179,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">status</string>
-						<reference key="source" ref="1002511301"/>
-						<reference key="destination" ref="615810372"/>
-					</object>
-					<int key="connectionID">30</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">buyer</string>
 						<reference key="source" ref="1002511301"/>
 						<reference key="destination" ref="770883893"/>
 					</object>
 					<int key="connectionID">31</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">post_fee</string>
-						<reference key="source" ref="1002511301"/>
-						<reference key="destination" ref="779168002"/>
-					</object>
-					<int key="connectionID">34</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">payment</string>
-						<reference key="source" ref="1002511301"/>
-						<reference key="destination" ref="374728981"/>
-					</object>
-					<int key="connectionID">35</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">rec</string>
-						<reference key="source" ref="1002511301"/>
-						<reference key="destination" ref="469398008"/>
-					</object>
-					<int key="connectionID">37</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">service_fee</string>
-						<reference key="source" ref="1002511301"/>
-						<reference key="destination" ref="671323868"/>
-					</object>
-					<int key="connectionID">38</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">note</string>
-						<reference key="source" ref="1002511301"/>
-						<reference key="destination" ref="153015017"/>
-					</object>
-					<int key="connectionID">39</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -384,15 +210,9 @@
 						<reference key="object" ref="1002511301"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="615595964"/>
-							<reference ref="374728981"/>
-							<reference ref="615810372"/>
-							<reference ref="1031859234"/>
-							<reference ref="153015017"/>
-							<reference ref="671323868"/>
-							<reference ref="779168002"/>
-							<reference ref="469398008"/>
-							<reference ref="770883893"/>
 							<reference ref="405391988"/>
+							<reference ref="1031859234"/>
+							<reference ref="770883893"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -407,38 +227,8 @@
 						<reference key="parent" ref="1002511301"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">10</int>
-						<reference key="object" ref="779168002"/>
-						<reference key="parent" ref="1002511301"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">11</int>
-						<reference key="object" ref="374728981"/>
-						<reference key="parent" ref="1002511301"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">12</int>
-						<reference key="object" ref="615810372"/>
-						<reference key="parent" ref="1002511301"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">13</int>
-						<reference key="object" ref="153015017"/>
-						<reference key="parent" ref="1002511301"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
 						<reference key="object" ref="770883893"/>
-						<reference key="parent" ref="1002511301"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="469398008"/>
-						<reference key="parent" ref="1002511301"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">16</int>
-						<reference key="object" ref="671323868"/>
 						<reference key="parent" ref="1002511301"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -453,13 +243,7 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">TradeCell</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="41.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -541,6 +325,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1498</string>
 	</data>
 </archive>
